settings: Fix simplebar scrollbar in org settings dropdown.
This commit fixes the dropdown_list_widget to use simplebar for
scrolling.

It was not being used because data-simplebar should not be inserted
to the element being rerendered. This commit adds a new element
wrapping 'dropdown-list-body' which was being rerendered and
data-simplebar is added to that new element 'dropdown-list-wrapper'.

Also, there should always be a max-height property on data-simplebar
element and it is also added in this commit.

There is also a change to set margin of 10px only on the first div
element and which is direct children of organization-settings-parent
element. This is correct because we only want margin to add some space
between the heading of subsection and the first setting of that
subsection. Previously, the margin was being added to first div of all
the other child containers also and this was adding unnecessary margin
to the first div element of different simplebar containers.

--- a/static/styles/settings.scss
+++ b/static/styles/settings.scss
@@ -544,7 +544,7 @@ input[type=checkbox] {
     }
 }
 
-.organization-settings-parent div:first-of-type {
+.organization-settings-parent > div:first-of-type {
     margin-top: 10px;
 }
 
@@ -1592,11 +1592,17 @@ body:not(.night-mode) #settings_page .custom_user_field .datepicker {
         bottom: auto;
     }
 
-    .dropdown-list-body {
+    .dropdown-list-wrapper {
         position: relative;
         height: auto;
         max-height: 200px;
         overflow-y: auto;
+        margin-top: 0;
+        display: block;
+    }
+
+    .dropdown-list-body {
+        position: relative;
         margin-top: 0;
         display: block;
     }
